tests/compile_fail/like_on_int.stderr
error[E0277]: the trait bound `Int: Textual` is not satisfied
  --> tests/compile_fail/like_on_int.rs:17:18
   |
17 |     let _ = like(user.id, "%test%");
   |             ---- ^^^^^^^ the trait `Textual` is not implemented for `Int`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `Textual`:
             VarChar
             drizzle::core::types::Any
             drizzle::core::types::Text
note: required by a bound in `drizzle::core::expr::like`
  --> core/src/expr/cmp.rs
   |
   | pub fn like<'a, V, L, R>(left: L, pattern: R) -> SQLExpr<'a, V, Bool, NonNull, Scalar>
   |        ---- required by a bound in this function
...
   |     L::SQLType: Textual,
   |                 ^^^^^^^ required by this bound in `like`
